docs/reference/M.2/v1.0/digital.rst
RF Transceiver Digital
######################

The `LMS7002M`_ digital interface and control signals are described below.

Digital Interface
*****************

LMS7002 is using baseband signals (I and Q) to transfer data to/from the NXP Baseband processor:

* TX signals LMS_TX1_BB_I/Q_P/N where I/Q indicates in-phase and quadrature signals and P/N indicates differential positive and negative pairs. 
* RX signals LMS_RX1/2_BB_I/Q_P/N where RX1/2 indicates RF channel 1 or 2, I/Q indicates I and Q signals and P/N indicates differential positive and negative pairs. 


Control
*******

These signals are used for the following functions within the LMS7002 RFIC:

* LMS_RXEN, LMS_TXEN – receiver and transmitter enable/disable signals are not controlled and connected to VDIO_LMS (3.3V) power rail.
* LMS_RESET – LMS7002M reset is connected to I2C I/O expander GPA0.
* SPI Interface: LMS7002M transceiver is configured via 4-wire SPI interface: LA_SPI_SCLK, LA_SPI_MOSI, LA_SPI_MISO, LA_SPI_LMS_SS. The SPI interface is connected to BB processor via level converter IC8.
* LMS I2C Interface: can be used for LMS EEPROM content modification or debug purposes. The signals LMS_I2C_SCL and LMS_I2C_DATA are connected to EEPROM. They can be also connected to BB processors LA_I2C_SCL and LA_I2C_SDA.


LMS7002M Pins
*************

.. table:: Table 2. LMS7002M RF transceiver signals

    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | **Chip   pin (IC1)** | **Chip   reference (IC1)** | **Schematic   signal name** |                       |                          | **Comment**                                  |
    |                      |                            |                             |      **BB processor** |      **BB processor**    |                                              |
    |                      |                            |                             |                       |                          |                                              |
    |                      |                            |                             |      **pin (IC6)**    |      **reference (IC6)** |                                              |
    +======================+============================+=============================+=======================+==========================+==============================================+
    | AB34                 | MCLK1                      | LMS_MCLK1                   | F1                    | DCS_CLK_P                | DCS_CLK_P                                    |
    |                      |                            |                             +-----------------------+--------------------------+----------------------------------------------+
    |                      |                            |                             | F2                    | DCS_CLK_N                | DCS_CLK_N                                    |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | D28                  | SEN                        | LA_SPI_LMS_SS               | P7                    | SPI_CS0_B                | SPI   signals connected via level translator |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+                                              |
    | C29                  | SCLK                       | LA_SPI_SCLK                 | P8                    | SPI_CLK                  |                                              |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+                                              |
    | F30                  | SDIO                       | LA_SPI_MOSI                 | R9                    | SPI_MOSI                 |                                              |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+                                              |
    | F28                  | SDO                        | LA_SPI_MISO                 | P8                    | SPI_MISO                 |                                              |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | D26                  | SDA                        | LMS_I2C_SDA                 | P6   (NC)             | IIC1_SDA                 |                                              |
    |                      |                            |                             |                       |                          |      BB processor and LMS7002M I2C signals   |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+                                              |
    | C27                  | SCL                        | LMS_I2C_SCL                 | R6   (NC)             | IIC1_SCL                 |      are not connected by default            |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | T4                   | tbbip_pad_1                | LMS_TX1_BB_I_P              | A7                    | TX_I_P                   | RF   channel 1 TX baseband I data            |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+                                              |
    | R5                   | tbbin_pad_1                | LMS_TX1_BB_I_N              | B7                    | TX_I_N                   |                                              |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | R3                   | tbbqp_pad_1                | LMS_TX1_BB_Q_P              | A9                    | TX_Q_P                   | RF   channel 1 TX baseband Q data            |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+                                              |
    | P2                   | tbbqn_pad_1                | LMS_TX1_BB_Q_N              | B9                    | TX_Q_N                   |                                              |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | V2                   | tbbip_pad_2                | LMS_TX2_BB_I_P              |                       |                          | Connected toX6 pin 2 (RF2 TX NC)             |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | T6                   | tbbin_pad_2                | LMS_TX2_BB_I_N              |                       |                          | Connected to X6 pin 3 (RF2 TX NC)            |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | U3                   | tbbqp_pad_2                | LMS_TX2_BB_Q_P              |                       |                          | Connected to X6 pin 5 (RF2 TX NC)            |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | U1                   | tbbqn_pad_2                | LMS_TX2_BB_Q_N              |                       |                          | Connected to X6 pin 6 (RF2 TX NC)            |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | Y6                   | rbbip_pad_1                | LMS_RX1_BB_I_P              | B4                    | RX0_I_P                  | RF   channel 1 RX baseband I data            |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+                                              |
    | AB2                  | rbbin_pad_1                | LMS_RX1_BB_I_N              | A4                    | RX0_I_N                  |                                              |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | AB4                  | rbbqp_pad_1                | LMS_RX1_BB_Q_P              | A6                    | RX0_Q_P                  | RF   channel 1 RX baseband Q data            |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+                                              |
    | AA5                  | rbbqn_pad_1                | LMS_RX1_BB_Q_N              | B6                    | RX0_Q_N                  |                                              |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | AD2                  | rbbip_pad_2                | LMS_RX2_BB_I_P              | A10                   | RX1_I_P                  | RF   channel 2 RX baseband I data            |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+                                              |
    | AC3                  | rbbin_pad_2                | LMS_RX2_BB_I_N              | B10                   | RX1_I_N                  |                                              |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | AC5                  | rbbqp_pad_2                | LMS_RX2_BB_Q_P              | B12                   | RX1_Q_P                  | RF   channel 2 RX baseband Q data            |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+                                              |
    | AB6                  | rbbqn_pad_2                | LMS_RX2_BB_Q_N              | A12                   | RX1_Q_N                  |                                              |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | E5                   | xoscin_tx                  | LMS_TX_CLK                  |                       |                          | Connected to 30.72 MHz clock                 |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | AM24                 | xoscin_rx                  | LMS_RxPLL_CLK               |                       |                          | Connected to 30.72 MHz clock                 |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | E27                  | RESET                      | LMS_RESET                   |                       |                          | I/O expander GPA0                            |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | U29                  | TXEN                       | LMS_TXEN                    |                       |                          | Pulled-up by R11                             |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | V34                  | RXEN                       | LMS_RXEN                    |                       |                          | Pulled-up by R12                             |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | U33                  | CORE_LDO_EN                | LMS_CORE_LDO_EN             |                       |                          | Pulled-up by R13                             |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
    | V30                  | LOGIC_RESET                |                             |                       |                          | GND                                          |
    +----------------------+----------------------------+-----------------------------+-----------------------+--------------------------+----------------------------------------------+
